# raisin

./: .gitignore  CMakeLists.txt  raisin-config.cmake.in
examples/: CMakeLists.txt  sketch.cpp
examples/assets/: config.toml
examples/point/: CMakeLists.txt  point.hpp  sketch.cpp
examples/point/assets/: point.toml
examples/sdl/: CMakeLists.txt  sketch.cpp
examples/sdl/assets/: config.toml
include/raisin/: future.hpp  parsing.hpp  raisin.hpp  renderer.hpp  system.hpp  window.hpp
src/: test.cpp
src/raisin/: flags.hpp  fundamental_types.hpp  future.hpp  lookup_table.hpp  parsing.hpp  raisin.hpp  renderer.hpp  sdl.hpp  system.hpp  window.hpp
src/raisin/future/: expected.hpp
src/raisin/sdl/: color.hpp  renderer.hpp  system.hpp  window.hpp
